kubernetes/apps/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
spec:
  serviceName: headless
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:12.3.2
          ports:
            - name: grafana
              containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: 3000
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
