kubernetes/apps/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless
spec:
  clusterIP: None
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.home.arpa
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
