kubernetes/apps/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-test
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  hostnames:
    - lab.home.arpa
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /stats
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: headless
          port: 3000
